@@ -1,5 +1,7 @@
 package net.mwav.common.module;
 
+import com.mysql.jdbc.util.Base64Decoder;
+
 import java.io.IOException;
 import java.util.Arrays;
  
@@ -7,8 +9,9 @@ import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 // 아파치로 변경 예정
 
 
@@ -225,18 +228,17 @@ public class AesEncryption {
     //Base 64란 8비트(=1바이트) 데이터를 문자코드에 영향을 받지 않는 공통 ASCII 문자로 이루어진 6비트 데이터로 변환하는 것이다. 
     //http://118k.tistory.com/34
     public static byte[] aesDecodeBuf (String decryptVariable) throws IOException{
-    
-    	byte[] decryptVarDecoding = null;
-    	decryptVarDecoding = new BASE64Decoder().decodeBuffer(decryptVariable);  // 2진데이터를 문자로 변경 
+    	Decoder decoder = Base64.getDecoder();
+
+        byte[] decryptVarDecoding = decoder.decode(decryptVariable); // 2진데이터를 문자로 변경
 		
     	return decryptVarDecoding;
     }
     
   //BaseEncoding  암호화된 기본 값이 base64 encode
-    public static String aesEncodeBuf (byte[] encryptVariable) throws IOException{ 
-    
-    	String encryptEncoding = new BASE64Encoder().encode(encryptVariable);
-		
+    public static String aesEncodeBuf (byte[] encryptVariable) throws IOException{
+        Encoder encoder = Base64.getEncoder();
+        String encryptEncoding = new String(encoder.encode(encryptVariable));
     	return encryptEncoding;
     }
     
